# zbox-nodejs

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  README.md  package-lock.json  package.json  test.js
examples/: hello_world.js
lib/: index.js  utils.js
native/: Cargo.toml  README.md  package.json
native/src/: lib.rs
scripts/: postinstall.js  prepack.js
test/: zbox_test.js
