[package]
name = "zbox-nodejs"
version = "0.1.0"
description = "Node.js binding for ZboxFS, a zero-details, privacy-focused in-app file system."
authors = ["Zbox.io"]
homepage = "https://github.com/zboxfs/zbox-nodejs"
repository = "https://github.com/zboxfs/zbox-nodejs"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "zbox_nodejs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
zbox = { version = "0.8.5", features = ["storage-zbox-native"] }
